@@ -7,8 +7,8 @@ import edu.umd.cs.piccolo.PNode;
 /**
  * @author Sam Reid
  */
-public class NumericalNode extends PNode {
-    public NumericalNode( final FractionsIntroModel model ) {
+public class FractionEqualityPanel extends PNode {
+    public FractionEqualityPanel( final FractionsIntroModel model ) {
 
         //Show the main fraction control.  Wrap in a zero offset node since its internal layout is not normalized
         final FractionControlNode fractionNode = new FractionControlNode( model.numerator, model.denominator );
@@ -16,9 +16,9 @@ public class NumericalNode extends PNode {
 
         final EqualsSignNode equalsSignNode = new EqualsSignNode();
         addChild( equalsSignNode );
-        equalsSignNode.setOffset( fractionNode.getFullBounds().getMaxX() + 50, fractionNode.getOffset().getY() );
+        equalsSignNode.setOffset( fractionNode.getFullBounds().getMaxX() + 50, fractionNode.getOffset().getY() - equalsSignNode.getFullBounds().getHeight() / 2 );
 
-        addChild( new ReducedFractionNode( model.reducedFraction, model.reducedFractionRepresentation.enabled ) {{
+        addChild( new FractionNode( model.numerator, model.denominator ) {{
             setOffset( fractionNode.getFullBounds().getMaxX() + 50 + equalsSignNode.getFullBounds().getWidth() + 50, fractionNode.getOffset().getY() );
         }} );
     }
