@@ -1,3 +1,4 @@
+Added more revisions for intro tab
 Matching game: Added horizontal and vertical bars
 # 0.00.08 (58036) Oct 26, 2011
 Matching game: Removed decimals
